PWA Trial Again

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,25 @@
 {
-  "short_name": "Avviare",
-  "name": "Avviare: Nido de Emprendedores",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logoSinQuote.svg",
-      "sizes": "any",
-      "type": "image/svg"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#769EC0",
-  "background_color": "#006270"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
