Setup Basico para el Disenio

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Avviare",
-  "name": "Avviare: Nido de Emprendedores",
+  "name": "Avviare",
   "icons": [
     {
       "src": "logoSinQuote.svg",
