--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,7 @@
     "react-hook-form": "^7.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recompose": "^0.30.0",
     "rsuite": "^4.10.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
