--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "cloudinary-react": "^1.7.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.0",
     "react-router-dom": "^5.2.0",
