--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "cloudinary-react": "^1.7.0",
+    "date-fns": "^2.22.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.0",
