--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.0",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
