--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.0",
     "react-paypal-button-v2": "^2.6.3",
+    "react-qr-scanner": "^1.0.0-alpha.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-text-mask": "^5.4.3",
